docs/versioned_docs/version-3.3/licenses/loft.mdx
---
title: Open Source Licenses
sidebar_label: OSS Licenses
---

# Loft and loftctl dependencies

The following open source dependencies are used to build [Loft][] and
[loftctl][].

[Loft]: https://loft.sh/docs/master/getting-started/explore
[loftctl]: https://github.com/loft-sh/loftctl

## Go Packages

Some packages may only be included on certain architectures or operating systems.


 - [ariga.io/atlas](https://pkg.go.dev/ariga.io/atlas) ([Apache-2.0](https://github.com/ariga/atlas/blob/v0.15.0/LICENSE))
 - [cloud.google.com/go/compute/metadata](https://pkg.go.dev/cloud.google.com/go/compute/metadata) ([Apache-2.0](https://github.com/googleapis/google-cloud-go/blob/compute/metadata/v0.2.3/compute/metadata/LICENSE))
 - [entgo.io/ent](https://pkg.go.dev/entgo.io/ent) ([Apache-2.0](https://github.com/ent/ent/blob/v0.12.5/LICENSE))
 - [filippo.io/edwards25519](https://pkg.go.dev/filippo.io/edwards25519) ([BSD-3-Clause](https://github.com/FiloSottile/edwards25519/blob/v1.0.0/LICENSE))
 - [github.com/AlecAivazis/survey/v2](https://pkg.go.dev/github.com/AlecAivazis/survey/v2) ([MIT](https://github.com/AlecAivazis/survey/blob/v2.3.7/LICENSE))
 - [github.com/AlecAivazis/survey/v2/terminal](https://pkg.go.dev/github.com/AlecAivazis/survey/v2/terminal) ([MIT](https://github.com/AlecAivazis/survey/blob/v2.3.7/terminal/LICENSE.txt))
 - [github.com/BurntSushi/toml](https://pkg.go.dev/github.com/BurntSushi/toml) ([MIT](https://github.com/BurntSushi/toml/blob/v1.3.2/COPYING))
 - [github.com/MakeNowJust/heredoc](https://pkg.go.dev/github.com/MakeNowJust/heredoc) ([MIT](https://github.com/MakeNowJust/heredoc/blob/v1.0.0/LICENSE))
 - [github.com/NYTimes/gziphandler](https://pkg.go.dev/github.com/NYTimes/gziphandler) ([Apache-2.0](https://github.com/NYTimes/gziphandler/blob/v1.1.1/LICENSE))
 - [github.com/Sytten/logrus-zap-hook](https://pkg.go.dev/github.com/Sytten/logrus-zap-hook) ([MIT](https://github.com/Sytten/logrus-zap-hook/blob/v0.1.0/LICENSE))
 - [github.com/acarl005/stripansi](https://pkg.go.dev/github.com/acarl005/stripansi) ([MIT](https://github.com/acarl005/stripansi/blob/5a71ef0e047d/LICENSE))
 - [github.com/agext/levenshtein](https://pkg.go.dev/github.com/agext/levenshtein) ([Apache-2.0](https://github.com/agext/levenshtein/blob/v1.2.3/LICENSE))
 - [github.com/anmitsu/go-shlex](https://pkg.go.dev/github.com/anmitsu/go-shlex) ([MIT](https://github.com/anmitsu/go-shlex/blob/38f4b401e2be/LICENSE))
 - [github.com/antlr/antlr4/runtime/Go/antlr/v4](https://pkg.go.dev/github.com/antlr/antlr4/runtime/Go/antlr/v4) ([BSD-3-Clause](https://github.com/antlr/antlr4/blob/8188dc5388df/runtime/Go/antlr/v4/LICENSE))
 - [github.com/apparentlymart/go-textseg/v15/textseg](https://pkg.go.dev/github.com/apparentlymart/go-textseg/v15/textseg) ([MIT](https://github.com/apparentlymart/go-textseg/blob/v15.0.0/LICENSE))
 - [github.com/asaskevich/govalidator](https://pkg.go.dev/github.com/asaskevich/govalidator) ([MIT](https://github.com/asaskevich/govalidator/blob/a9d515a09cc2/LICENSE))
 - [github.com/avast/retry-go/v4](https://pkg.go.dev/github.com/avast/retry-go/v4) ([MIT](https://github.com/avast/retry-go/blob/v4.5.1/LICENSE))
 - [github.com/aws/aws-sdk-go-v2](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/v1.23.5/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/config](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/config) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/config/v1.25.11/config/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/credentials](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/credentials) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/credentials/v1.16.9/credentials/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/feature/ec2/imds](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/feature/ec2/imds) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/feature/ec2/imds/v1.14.9/feature/ec2/imds/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/internal/configsources](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/internal/configsources) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/internal/configsources/v1.2.8/internal/configsources/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/internal/endpoints/v2](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/internal/endpoints/v2) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/internal/endpoints/v2.5.8/internal/endpoints/v2/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/internal/ini](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/internal/ini) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/internal/ini/v1.7.1/internal/ini/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/internal/sync/singleflight](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/internal/sync/singleflight) ([BSD-3-Clause](https://github.com/aws/aws-sdk-go-v2/blob/v1.23.5/internal/sync/singleflight/LICENSE))
 - [github.com/aws/aws-sdk-go-v2/service/internal/accept-encoding](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/service/internal/accept-encoding) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/service/internal/accept-encoding/v1.10.3/service/internal/accept-encoding/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/service/internal/presigned-url](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/service/internal/presigned-url) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/service/internal/presigned-url/v1.10.8/service/internal/presigned-url/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/service/ssm](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/service/ssm) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/service/ssm/v1.44.2/service/ssm/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/service/sso](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/service/sso) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/service/sso/v1.18.2/service/sso/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/service/ssooidc](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/service/ssooidc) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/service/ssooidc/v1.21.2/service/ssooidc/LICENSE.txt))
 - [github.com/aws/aws-sdk-go-v2/service/sts](https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/service/sts) ([Apache-2.0](https://github.com/aws/aws-sdk-go-v2/blob/service/sts/v1.26.2/service/sts/LICENSE.txt))
 - [github.com/aws/smithy-go](https://pkg.go.dev/github.com/aws/smithy-go) ([Apache-2.0](https://github.com/aws/smithy-go/blob/v1.18.1/LICENSE))
 - [github.com/aws/smithy-go/internal/sync/singleflight](https://pkg.go.dev/github.com/aws/smithy-go/internal/sync/singleflight) ([BSD-3-Clause](https://github.com/aws/smithy-go/blob/v1.18.1/internal/sync/singleflight/LICENSE))
 - [github.com/bahlo/generic-list-go](https://pkg.go.dev/github.com/bahlo/generic-list-go) ([BSD-3-Clause](https://github.com/bahlo/generic-list-go/blob/v0.2.0/LICENSE))
 - [github.com/beevik/etree](https://pkg.go.dev/github.com/beevik/etree) ([BSD-2-Clause](https://github.com/beevik/etree/blob/v1.2.0/LICENSE))
 - [github.com/beorn7/perks/quantile](https://pkg.go.dev/github.com/beorn7/perks/quantile) ([MIT](https://github.com/beorn7/perks/blob/v1.0.1/LICENSE))
 - [github.com/blang/semver](https://pkg.go.dev/github.com/blang/semver) ([MIT](https://github.com/blang/semver/blob/v3.5.1/LICENSE))
 - [github.com/blang/semver/v4](https://pkg.go.dev/github.com/blang/semver/v4) ([MIT](https://github.com/blang/semver/blob/v4.0.0/v4/LICENSE))
 - [github.com/buger/jsonparser](https://pkg.go.dev/github.com/buger/jsonparser) ([MIT](https://github.com/buger/jsonparser/blob/v1.1.1/LICENSE))
 - [github.com/cenkalti/backoff/v3](https://pkg.go.dev/github.com/cenkalti/backoff/v3) ([MIT](https://github.com/cenkalti/backoff/blob/v3.2.2/LICENSE))
 - [github.com/cenkalti/backoff/v4](https://pkg.go.dev/github.com/cenkalti/backoff/v4) ([MIT](https://github.com/cenkalti/backoff/blob/v4.2.1/LICENSE))
 - [github.com/cespare/xxhash/v2](https://pkg.go.dev/github.com/cespare/xxhash/v2) ([MIT](https://github.com/cespare/xxhash/blob/v2.2.0/LICENSE.txt))
 - [github.com/chai2010/gettext-go](https://pkg.go.dev/github.com/chai2010/gettext-go) ([BSD-3-Clause](https://github.com/chai2010/gettext-go/blob/v1.0.2/LICENSE))
 - [github.com/coreos/go-iptables/iptables](https://pkg.go.dev/github.com/coreos/go-iptables/iptables) ([Apache-2.0](https://github.com/coreos/go-iptables/blob/v0.7.0/LICENSE))
 - [github.com/coreos/go-oidc](https://pkg.go.dev/github.com/coreos/go-oidc) ([Apache-2.0](https://github.com/coreos/go-oidc/blob/v2.2.1/LICENSE))
 - [github.com/coreos/go-oidc/v3/oidc](https://pkg.go.dev/github.com/coreos/go-oidc/v3/oidc) ([Apache-2.0](https://github.com/coreos/go-oidc/blob/v3.8.0/LICENSE))
 - [github.com/coreos/go-semver/semver](https://pkg.go.dev/github.com/coreos/go-semver/semver) ([Apache-2.0](https://github.com/coreos/go-semver/blob/v0.3.1/LICENSE))
 - [github.com/coreos/go-systemd/v22](https://pkg.go.dev/github.com/coreos/go-systemd/v22) ([Apache-2.0](https://github.com/coreos/go-systemd/blob/v22.5.0/LICENSE))
 - [github.com/cpuguy83/go-md2man/v2/md2man](https://pkg.go.dev/github.com/cpuguy83/go-md2man/v2/md2man) ([MIT](https://github.com/cpuguy83/go-md2man/blob/v2.0.3/LICENSE.md))
 - [github.com/davecgh/go-spew/spew](https://pkg.go.dev/github.com/davecgh/go-spew/spew) ([ISC](https://github.com/davecgh/go-spew/blob/d8f796af33cc/LICENSE))
 - [github.com/denisbrodbeck/machineid](https://pkg.go.dev/github.com/denisbrodbeck/machineid) ([MIT](https://github.com/denisbrodbeck/machineid/blob/v1.0.1/LICENSE.md))
 - [github.com/dgryski/go-rendezvous](https://pkg.go.dev/github.com/dgryski/go-rendezvous) ([MIT](https://github.com/dgryski/go-rendezvous/blob/9f7001d12a5f/LICENSE))
 - [github.com/digitalocean/go-smbios/smbios](https://pkg.go.dev/github.com/digitalocean/go-smbios/smbios) ([Apache-2.0](https://github.com/digitalocean/go-smbios/blob/390a4f403a8e/LICENSE.md))
 - [github.com/docker/cli/cli/config](https://pkg.go.dev/github.com/docker/cli/cli/config) ([Apache-2.0](https://github.com/docker/cli/blob/v24.0.7/LICENSE))
 - [github.com/docker/docker-credential-helpers](https://pkg.go.dev/github.com/docker/docker-credential-helpers) ([MIT](https://github.com/docker/docker-credential-helpers/blob/v0.8.0/LICENSE))
 - [github.com/docker/docker/pkg/homedir](https://pkg.go.dev/github.com/docker/docker/pkg/homedir) ([Apache-2.0](https://github.com/docker/docker/blob/v24.0.7/LICENSE))
 - [github.com/dustin/go-humanize](https://pkg.go.dev/github.com/dustin/go-humanize) ([MIT](https://github.com/dustin/go-humanize/blob/v1.0.1/LICENSE))
 - [github.com/emicklei/go-restful/v3](https://pkg.go.dev/github.com/emicklei/go-restful/v3) ([MIT](https://github.com/emicklei/go-restful/blob/v3.11.0/LICENSE))
 - [github.com/evanphx/json-patch](https://pkg.go.dev/github.com/evanphx/json-patch) ([BSD-3-Clause](https://github.com/evanphx/json-patch/blob/v5.7.0/LICENSE))
 - [github.com/evanphx/json-patch/v5](https://pkg.go.dev/github.com/evanphx/json-patch/v5) ([BSD-3-Clause](https://github.com/evanphx/json-patch/blob/v5.7.0/v5/LICENSE))
 - [github.com/exponent-io/jsonpath](https://pkg.go.dev/github.com/exponent-io/jsonpath) ([MIT](https://github.com/exponent-io/jsonpath/blob/1de76d718b3f/LICENSE))
 - [github.com/fatih/camelcase](https://pkg.go.dev/github.com/fatih/camelcase) ([MIT](https://github.com/fatih/camelcase/blob/v1.0.0/LICENSE.md))
 - [github.com/felixge/httpsnoop](https://pkg.go.dev/github.com/felixge/httpsnoop) ([MIT](https://github.com/felixge/httpsnoop/blob/v1.0.4/LICENSE.txt))
 - [github.com/fsnotify/fsnotify](https://pkg.go.dev/github.com/fsnotify/fsnotify) ([BSD-3-Clause](https://github.com/fsnotify/fsnotify/blob/v1.7.0/LICENSE))
 - [github.com/fvbommel/sortorder](https://pkg.go.dev/github.com/fvbommel/sortorder) ([MIT](https://github.com/fvbommel/sortorder/blob/v1.1.0/LICENSE))
 - [github.com/fxamacker/cbor/v2](https://pkg.go.dev/github.com/fxamacker/cbor/v2) ([MIT](https://github.com/fxamacker/cbor/blob/v2.5.0/LICENSE))
 - [github.com/gertd/go-pluralize](https://pkg.go.dev/github.com/gertd/go-pluralize) ([MIT](https://github.com/gertd/go-pluralize/blob/v0.2.1/LICENSE))
 - [github.com/ghodss/yaml](https://pkg.go.dev/github.com/ghodss/yaml) ([MIT](https://github.com/ghodss/yaml/blob/v1.0.0/LICENSE))
 - [github.com/gliderlabs/ssh](https://pkg.go.dev/github.com/gliderlabs/ssh) ([BSD-3-Clause](https://github.com/gliderlabs/ssh/blob/v0.3.5/LICENSE))
 - [github.com/go-chi/chi/v5](https://pkg.go.dev/github.com/go-chi/chi/v5) ([MIT](https://github.com/go-chi/chi/blob/v5.0.10/LICENSE))
 - [github.com/go-errors/errors](https://pkg.go.dev/github.com/go-errors/errors) ([MIT](https://github.com/go-errors/errors/blob/v1.5.1/LICENSE.MIT))
 - [github.com/go-jose/go-jose/v3](https://pkg.go.dev/github.com/go-jose/go-jose/v3) ([Apache-2.0](https://github.com/go-jose/go-jose/blob/v3.0.1/LICENSE))
 - [github.com/go-jose/go-jose/v3/json](https://pkg.go.dev/github.com/go-jose/go-jose/v3/json) ([BSD-3-Clause](https://github.com/go-jose/go-jose/blob/v3.0.1/json/LICENSE))
 - [github.com/go-logr/logr](https://pkg.go.dev/github.com/go-logr/logr) ([Apache-2.0](https://github.com/go-logr/logr/blob/v1.3.0/LICENSE))
 - [github.com/go-logr/stdr](https://pkg.go.dev/github.com/go-logr/stdr) ([Apache-2.0](https://github.com/go-logr/stdr/blob/v1.2.2/LICENSE))
 - [github.com/go-openapi/analysis](https://pkg.go.dev/github.com/go-openapi/analysis) ([Apache-2.0](https://github.com/go-openapi/analysis/blob/v0.21.4/LICENSE))
 - [github.com/go-openapi/errors](https://pkg.go.dev/github.com/go-openapi/errors) ([Apache-2.0](https://github.com/go-openapi/errors/blob/v0.20.4/LICENSE))
 - [github.com/go-openapi/inflect](https://pkg.go.dev/github.com/go-openapi/inflect) ([MIT](https://github.com/go-openapi/inflect/blob/v0.19.0/LICENCE))
 - [github.com/go-openapi/jsonpointer](https://pkg.go.dev/github.com/go-openapi/jsonpointer) ([Apache-2.0](https://github.com/go-openapi/jsonpointer/blob/v0.20.0/LICENSE))
 - [github.com/go-openapi/jsonreference](https://pkg.go.dev/github.com/go-openapi/jsonreference) ([Apache-2.0](https://github.com/go-openapi/jsonreference/blob/v0.20.2/LICENSE))
 - [github.com/go-openapi/loads](https://pkg.go.dev/github.com/go-openapi/loads) ([Apache-2.0](https://github.com/go-openapi/loads/blob/v0.21.2/LICENSE))
 - [github.com/go-openapi/spec](https://pkg.go.dev/github.com/go-openapi/spec) ([Apache-2.0](https://github.com/go-openapi/spec/blob/v0.20.11/LICENSE))
 - [github.com/go-openapi/strfmt](https://pkg.go.dev/github.com/go-openapi/strfmt) ([Apache-2.0](https://github.com/go-openapi/strfmt/blob/v0.21.8/LICENSE))
 - [github.com/go-openapi/swag](https://pkg.go.dev/github.com/go-openapi/swag) ([Apache-2.0](https://github.com/go-openapi/swag/blob/v0.22.4/LICENSE))
 - [github.com/go-sql-driver/mysql](https://pkg.go.dev/github.com/go-sql-driver/mysql) ([MPL-2.0](https://github.com/go-sql-driver/mysql/blob/v1.7.1/LICENSE))
 - [github.com/go-task/slim-sprig](https://pkg.go.dev/github.com/go-task/slim-sprig) ([MIT](https://github.com/go-task/slim-sprig/blob/52ccab3ef572/LICENSE.txt))
 - [github.com/gobuffalo/flect](https://pkg.go.dev/github.com/gobuffalo/flect) ([MIT](https://github.com/gobuffalo/flect/blob/v1.0.2/LICENSE))
 - [github.com/godbus/dbus/v5](https://pkg.go.dev/github.com/godbus/dbus/v5) ([BSD-2-Clause](https://github.com/godbus/dbus/blob/76236955d466/LICENSE))
 - [github.com/gogo/protobuf](https://pkg.go.dev/github.com/gogo/protobuf) ([BSD-3-Clause](https://github.com/gogo/protobuf/blob/v1.3.2/LICENSE))
 - [github.com/golang/groupcache/lru](https://pkg.go.dev/github.com/golang/groupcache/lru) ([Apache-2.0](https://github.com/golang/groupcache/blob/41bb18bfe9da/LICENSE))
 - [github.com/golang/protobuf](https://pkg.go.dev/github.com/golang/protobuf) ([BSD-3-Clause](https://github.com/golang/protobuf/blob/v1.5.3/LICENSE))
 - [github.com/golang/snappy](https://pkg.go.dev/github.com/golang/snappy) ([BSD-3-Clause](https://github.com/golang/snappy/blob/v0.0.4/LICENSE))
 - [github.com/google/btree](https://pkg.go.dev/github.com/google/btree) ([Apache-2.0](https://github.com/google/btree/blob/v1.1.2/LICENSE))
 - [github.com/google/cel-go](https://pkg.go.dev/github.com/google/cel-go) ([Apache-2.0](https://github.com/google/cel-go/blob/v0.16.1/LICENSE))
 - [github.com/google/gnostic-models](https://pkg.go.dev/github.com/google/gnostic-models) ([Apache-2.0](https://github.com/google/gnostic-models/blob/c7be7c783f49/LICENSE))
 - [github.com/google/go-cmp/cmp](https://pkg.go.dev/github.com/google/go-cmp/cmp) ([BSD-3-Clause](https://github.com/google/go-cmp/blob/v0.6.0/LICENSE))
 - [github.com/google/go-github/v30/github](https://pkg.go.dev/github.com/google/go-github/v30/github) ([BSD-3-Clause](https://github.com/google/go-github/blob/v30.1.0/LICENSE))
 - [github.com/google/go-querystring/query](https://pkg.go.dev/github.com/google/go-querystring/query) ([BSD-3-Clause](https://github.com/google/go-querystring/blob/v1.1.0/LICENSE))
 - [github.com/google/gofuzz](https://pkg.go.dev/github.com/google/gofuzz) ([Apache-2.0](https://github.com/google/gofuzz/blob/v1.2.0/LICENSE))
 - [github.com/google/nftables](https://pkg.go.dev/github.com/google/nftables) ([Apache-2.0](https://github.com/google/nftables/blob/9aa6fdf5a28c/LICENSE))
 - [github.com/google/s2a-go](https://pkg.go.dev/github.com/google/s2a-go) ([Apache-2.0](https://github.com/google/s2a-go/blob/v0.1.7/LICENSE.md))
 - [github.com/google/shlex](https://pkg.go.dev/github.com/google/shlex) ([Apache-2.0](https://github.com/google/shlex/blob/e7afc7fbc510/COPYING))
 - [github.com/google/uuid](https://pkg.go.dev/github.com/google/uuid) ([BSD-3-Clause](https://github.com/google/uuid/blob/v1.4.0/LICENSE))
 - [github.com/googleapis/enterprise-certificate-proxy/client](https://pkg.go.dev/github.com/googleapis/enterprise-certificate-proxy/client) ([Apache-2.0](https://github.com/googleapis/enterprise-certificate-proxy/blob/v0.3.2/LICENSE))
 - [github.com/googleapis/gax-go/v2](https://pkg.go.dev/github.com/googleapis/gax-go/v2) ([BSD-3-Clause](https://github.com/googleapis/gax-go/blob/v2.12.0/v2/LICENSE))
 - [github.com/gorilla/csrf](https://pkg.go.dev/github.com/gorilla/csrf) ([BSD-3-Clause](https://github.com/gorilla/csrf/blob/v1.7.2/LICENSE))
 - [github.com/gorilla/schema](https://pkg.go.dev/github.com/gorilla/schema) ([BSD-3-Clause](https://github.com/gorilla/schema/blob/v1.2.1/LICENSE))
 - [github.com/gorilla/securecookie](https://pkg.go.dev/github.com/gorilla/securecookie) ([BSD-3-Clause](https://github.com/gorilla/securecookie/blob/v1.1.2/LICENSE))
 - [github.com/gorilla/websocket](https://pkg.go.dev/github.com/gorilla/websocket) ([BSD-3-Clause](https://github.com/gorilla/websocket/blob/v1.5.1/LICENSE))
 - [github.com/gregjones/httpcache](https://pkg.go.dev/github.com/gregjones/httpcache) ([MIT](https://github.com/gregjones/httpcache/blob/901d90724c79/LICENSE.txt))
 - [github.com/grpc-ecosystem/go-grpc-prometheus](https://pkg.go.dev/github.com/grpc-ecosystem/go-grpc-prometheus) ([Apache-2.0](https://github.com/grpc-ecosystem/go-grpc-prometheus/blob/v1.2.0/LICENSE))
 - [github.com/grpc-ecosystem/grpc-gateway/v2](https://pkg.go.dev/github.com/grpc-ecosystem/grpc-gateway/v2) ([BSD-3-Clause](https://github.com/grpc-ecosystem/grpc-gateway/blob/v2.18.1/LICENSE))
 - [github.com/hashicorp/errwrap](https://pkg.go.dev/github.com/hashicorp/errwrap) ([MPL-2.0](https://github.com/hashicorp/errwrap/blob/v1.1.0/LICENSE))
 - [github.com/hashicorp/go-cleanhttp](https://pkg.go.dev/github.com/hashicorp/go-cleanhttp) ([MPL-2.0](https://github.com/hashicorp/go-cleanhttp/blob/v0.5.2/LICENSE))
 - [github.com/hashicorp/go-multierror](https://pkg.go.dev/github.com/hashicorp/go-multierror) ([MPL-2.0](https://github.com/hashicorp/go-multierror/blob/v1.1.1/LICENSE))
 - [github.com/hashicorp/go-retryablehttp](https://pkg.go.dev/github.com/hashicorp/go-retryablehttp) ([MPL-2.0](https://github.com/hashicorp/go-retryablehttp/blob/v0.7.5/LICENSE))
 - [github.com/hashicorp/go-rootcerts](https://pkg.go.dev/github.com/hashicorp/go-rootcerts) ([MPL-2.0](https://github.com/hashicorp/go-rootcerts/blob/v1.0.2/LICENSE))
 - [github.com/hashicorp/go-secure-stdlib/parseutil](https://pkg.go.dev/github.com/hashicorp/go-secure-stdlib/parseutil) ([MPL-2.0](https://github.com/hashicorp/go-secure-stdlib/blob/parseutil/v0.1.8/parseutil/LICENSE))
 - [github.com/hashicorp/go-secure-stdlib/strutil](https://pkg.go.dev/github.com/hashicorp/go-secure-stdlib/strutil) ([MPL-2.0](https://github.com/hashicorp/go-secure-stdlib/blob/strutil/v0.1.2/strutil/LICENSE))
 - [github.com/hashicorp/go-sockaddr](https://pkg.go.dev/github.com/hashicorp/go-sockaddr) ([MPL-2.0](https://github.com/hashicorp/go-sockaddr/blob/v1.0.6/LICENSE))
 - [github.com/hashicorp/golang-lru](https://pkg.go.dev/github.com/hashicorp/golang-lru) ([MPL-2.0](https://github.com/hashicorp/golang-lru/blob/v1.0.2/LICENSE))
 - [github.com/hashicorp/hcl](https://pkg.go.dev/github.com/hashicorp/hcl) ([MPL-2.0](https://github.com/hashicorp/hcl/blob/v1.0.0/LICENSE))
 - [github.com/hashicorp/hcl/v2](https://pkg.go.dev/github.com/hashicorp/hcl/v2) ([MPL-2.0](https://github.com/hashicorp/hcl/blob/v2.19.1/LICENSE))
 - [github.com/hashicorp/vault/api](https://pkg.go.dev/github.com/hashicorp/vault/api) ([MPL-2.0](https://github.com/hashicorp/vault/blob/api/v1.10.0/api/LICENSE))
 - [github.com/hashicorp/yamux](https://pkg.go.dev/github.com/hashicorp/yamux) ([MPL-2.0](https://github.com/hashicorp/yamux/blob/a8b47c1ff9c4/LICENSE))
 - [github.com/hdevalence/ed25519consensus](https://pkg.go.dev/github.com/hdevalence/ed25519consensus) ([BSD-3-Clause](https://github.com/hdevalence/ed25519consensus/blob/v0.1.0/LICENSE))
 - [github.com/illarion/gonotify](https://pkg.go.dev/github.com/illarion/gonotify) ([MIT](https://github.com/illarion/gonotify/blob/v1.0.1/LICENSE))
 - [github.com/imdario/mergo](https://pkg.go.dev/github.com/imdario/mergo) ([BSD-3-Clause](https://github.com/imdario/mergo/blob/v0.3.16/LICENSE))
 - [github.com/inconshreveable/go-update](https://pkg.go.dev/github.com/inconshreveable/go-update) ([Apache-2.0](https://github.com/inconshreveable/go-update/blob/8152e7eb6ccf/LICENSE))
 - [github.com/inconshreveable/go-update/internal/binarydist](https://pkg.go.dev/github.com/inconshreveable/go-update/internal/binarydist) ([MIT](https://github.com/inconshreveable/go-update/blob/8152e7eb6ccf/internal/binarydist/License))
 - [github.com/inconshreveable/go-update/internal/osext](https://pkg.go.dev/github.com/inconshreveable/go-update/internal/osext) ([BSD-3-Clause](https://github.com/inconshreveable/go-update/blob/8152e7eb6ccf/internal/osext/LICENSE))
 - [github.com/insomniacslk/dhcp](https://pkg.go.dev/github.com/insomniacslk/dhcp) ([BSD-3-Clause](https://github.com/insomniacslk/dhcp/blob/8c70d406f6d2/LICENSE))
 - [github.com/invopop/jsonschema](https://pkg.go.dev/github.com/invopop/jsonschema) ([MIT](https://github.com/invopop/jsonschema/blob/v0.12.0/COPYING))
 - [github.com/jmespath/go-jmespath](https://pkg.go.dev/github.com/jmespath/go-jmespath) ([Apache-2.0](https://github.com/jmespath/go-jmespath/blob/v0.4.0/LICENSE))
 - [github.com/jmoiron/sqlx](https://pkg.go.dev/github.com/jmoiron/sqlx) ([MIT](https://github.com/jmoiron/sqlx/blob/v1.3.5/LICENSE))
 - [github.com/jonboulle/clockwork](https://pkg.go.dev/github.com/jonboulle/clockwork) ([Apache-2.0](https://github.com/jonboulle/clockwork/blob/v0.4.0/LICENSE))
 - [github.com/josharian/intern](https://pkg.go.dev/github.com/josharian/intern) ([MIT](https://github.com/josharian/intern/blob/v1.0.0/license.md))
 - [github.com/josharian/native](https://pkg.go.dev/github.com/josharian/native) ([MIT](https://github.com/josharian/native/blob/5c7d0dd6ab86/license))
 - [github.com/jsimonetti/rtnetlink](https://pkg.go.dev/github.com/jsimonetti/rtnetlink) ([MIT](https://github.com/jsimonetti/rtnetlink/blob/v1.4.0/LICENSE.md))
 - [github.com/json-iterator/go](https://pkg.go.dev/github.com/json-iterator/go) ([MIT](https://github.com/json-iterator/go/blob/v1.1.12/LICENSE))
 - [github.com/julienschmidt/httprouter](https://pkg.go.dev/github.com/julienschmidt/httprouter) ([BSD-3-Clause](https://github.com/julienschmidt/httprouter/blob/v1.3.0/LICENSE))
 - [github.com/k0kubun/go-ansi](https://pkg.go.dev/github.com/k0kubun/go-ansi) ([MIT](https://github.com/k0kubun/go-ansi/blob/3bf9e2903213/LICENSE.txt))
 - [github.com/kballard/go-shellquote](https://pkg.go.dev/github.com/kballard/go-shellquote) ([MIT](https://github.com/kballard/go-shellquote/blob/95032a82bc51/LICENSE))
 - [github.com/klauspost/compress](https://pkg.go.dev/github.com/klauspost/compress) ([Apache-2.0](https://github.com/klauspost/compress/blob/v1.17.4/LICENSE))
 - [github.com/klauspost/compress/internal/snapref](https://pkg.go.dev/github.com/klauspost/compress/internal/snapref) ([BSD-3-Clause](https://github.com/klauspost/compress/blob/v1.17.4/internal/snapref/LICENSE))
 - [github.com/klauspost/compress/zstd/internal/xxhash](https://pkg.go.dev/github.com/klauspost/compress/zstd/internal/xxhash) ([MIT](https://github.com/klauspost/compress/blob/v1.17.4/zstd/internal/xxhash/LICENSE.txt))
 - [github.com/kortschak/wol](https://pkg.go.dev/github.com/kortschak/wol) ([BSD-3-Clause](https://github.com/kortschak/wol/blob/da482cc4850a/LICENSE))
 - [github.com/lib/pq](https://pkg.go.dev/github.com/lib/pq) ([MIT](https://github.com/lib/pq/blob/v1.10.9/LICENSE.md))
 - [github.com/liggitt/tabwriter](https://pkg.go.dev/github.com/liggitt/tabwriter) ([BSD-3-Clause](https://github.com/liggitt/tabwriter/blob/89fcab3d43de/LICENSE))
 - [github.com/mailru/easyjson](https://pkg.go.dev/github.com/mailru/easyjson) ([MIT](https://github.com/mailru/easyjson/blob/v0.7.7/LICENSE))
 - [github.com/mattermost/xml-roundtrip-validator](https://pkg.go.dev/github.com/mattermost/xml-roundtrip-validator) ([Apache-2.0](https://github.com/mattermost/xml-roundtrip-validator/blob/v0.1.0/LICENSE.txt))
 - [github.com/mattn/go-colorable](https://pkg.go.dev/github.com/mattn/go-colorable) ([MIT](https://github.com/mattn/go-colorable/blob/v0.1.13/LICENSE))
 - [github.com/mattn/go-isatty](https://pkg.go.dev/github.com/mattn/go-isatty) ([MIT](https://github.com/mattn/go-isatty/blob/v0.0.20/LICENSE))
 - [github.com/mattn/go-runewidth](https://pkg.go.dev/github.com/mattn/go-runewidth) ([MIT](https://github.com/mattn/go-runewidth/blob/v0.0.15/LICENSE))
 - [github.com/matttproud/golang_protobuf_extensions/v2/pbutil](https://pkg.go.dev/github.com/matttproud/golang_protobuf_extensions/v2/pbutil) ([Apache-2.0](https://github.com/matttproud/golang_protobuf_extensions/blob/v2.0.0/LICENSE))
 - [github.com/mdlayher/genetlink](https://pkg.go.dev/github.com/mdlayher/genetlink) ([MIT](https://github.com/mdlayher/genetlink/blob/v1.3.2/LICENSE.md))
 - [github.com/mdlayher/netlink](https://pkg.go.dev/github.com/mdlayher/netlink) ([MIT](https://github.com/mdlayher/netlink/blob/v1.7.2/LICENSE.md))
 - [github.com/mdlayher/sdnotify](https://pkg.go.dev/github.com/mdlayher/sdnotify) ([MIT](https://github.com/mdlayher/sdnotify/blob/v1.0.0/LICENSE.md))
 - [github.com/mdlayher/socket](https://pkg.go.dev/github.com/mdlayher/socket) ([MIT](https://github.com/mdlayher/socket/blob/v0.5.0/LICENSE.md))
 - [github.com/metal-stack/go-ipam](https://pkg.go.dev/github.com/metal-stack/go-ipam) ([MIT](https://github.com/metal-stack/go-ipam/blob/v1.12.6/LICENSE))
 - [github.com/mgutz/ansi](https://pkg.go.dev/github.com/mgutz/ansi) ([MIT](https://github.com/mgutz/ansi/blob/d51e80ef957d/LICENSE))
 - [github.com/miekg/dns](https://pkg.go.dev/github.com/miekg/dns) ([BSD-3-Clause](https://github.com/miekg/dns/blob/v1.1.57/LICENSE))
 - [github.com/mitchellh/go-homedir](https://pkg.go.dev/github.com/mitchellh/go-homedir) ([MIT](https://github.com/mitchellh/go-homedir/blob/v1.1.0/LICENSE))
 - [github.com/mitchellh/go-ps](https://pkg.go.dev/github.com/mitchellh/go-ps) ([MIT](https://github.com/mitchellh/go-ps/blob/v1.0.0/LICENSE.md))
 - [github.com/mitchellh/go-wordwrap](https://pkg.go.dev/github.com/mitchellh/go-wordwrap) ([MIT](https://github.com/mitchellh/go-wordwrap/blob/v1.0.1/LICENSE.md))
 - [github.com/mitchellh/hashstructure/v2](https://pkg.go.dev/github.com/mitchellh/hashstructure/v2) ([MIT](https://github.com/mitchellh/hashstructure/blob/v2.0.2/LICENSE))
 - [github.com/mitchellh/mapstructure](https://pkg.go.dev/github.com/mitchellh/mapstructure) ([MIT](https://github.com/mitchellh/mapstructure/blob/v1.5.0/LICENSE))
 - [github.com/moby/spdystream](https://pkg.go.dev/github.com/moby/spdystream) ([Apache-2.0](https://github.com/moby/spdystream/blob/v0.2.0/LICENSE))
 - [github.com/moby/sys/mount](https://pkg.go.dev/github.com/moby/sys/mount) ([Apache-2.0](https://github.com/moby/sys/blob/mount/v0.3.3/mount/LICENSE))
 - [github.com/moby/sys/mountinfo](https://pkg.go.dev/github.com/moby/sys/mountinfo) ([Apache-2.0](https://github.com/moby/sys/blob/mountinfo/v0.6.2/mountinfo/LICENSE))
 - [github.com/moby/term](https://pkg.go.dev/github.com/moby/term) ([Apache-2.0](https://github.com/moby/term/blob/v0.5.0/LICENSE))
 - [github.com/modern-go/concurrent](https://pkg.go.dev/github.com/modern-go/concurrent) ([Apache-2.0](https://github.com/modern-go/concurrent/blob/bacd9c7ef1dd/LICENSE))
 - [github.com/modern-go/reflect2](https://pkg.go.dev/github.com/modern-go/reflect2) ([Apache-2.0](https://github.com/modern-go/reflect2/blob/v1.0.2/LICENSE))
 - [github.com/monochromegane/go-gitignore](https://pkg.go.dev/github.com/monochromegane/go-gitignore) ([MIT](https://github.com/monochromegane/go-gitignore/blob/205db1a8cc00/LICENSE))
 - [github.com/montanaflynn/stats](https://pkg.go.dev/github.com/montanaflynn/stats) ([MIT](https://github.com/montanaflynn/stats/blob/v0.7.1/LICENSE))
 - [github.com/muhlemmer/gu](https://pkg.go.dev/github.com/muhlemmer/gu) ([Unlicense](https://github.com/muhlemmer/gu/blob/v0.3.1/LICENSE))
 - [github.com/munnerz/goautoneg](https://pkg.go.dev/github.com/munnerz/goautoneg) ([BSD-3-Clause](https://github.com/munnerz/goautoneg/blob/a7dc8b61c822/LICENSE))
 - [github.com/mxk/go-flowrate/flowrate](https://pkg.go.dev/github.com/mxk/go-flowrate/flowrate) ([BSD-3-Clause](https://github.com/mxk/go-flowrate/blob/cca7078d478f/LICENSE))
 - [github.com/oklog/ulid](https://pkg.go.dev/github.com/oklog/ulid) ([Apache-2.0](https://github.com/oklog/ulid/blob/v1.3.1/LICENSE))
 - [github.com/olekukonko/tablewriter](https://pkg.go.dev/github.com/olekukonko/tablewriter) ([MIT](https://github.com/olekukonko/tablewriter/blob/v0.0.5/LICENSE.md))
 - [github.com/onsi/ginkgo/v2](https://pkg.go.dev/github.com/onsi/ginkgo/v2) ([MIT](https://github.com/onsi/ginkgo/blob/v2.13.2/LICENSE))
 - [github.com/onsi/gomega](https://pkg.go.dev/github.com/onsi/gomega) ([MIT](https://github.com/onsi/gomega/blob/v1.30.0/LICENSE))
 - [github.com/peterbourgon/diskv](https://pkg.go.dev/github.com/peterbourgon/diskv) ([MIT](https://github.com/peterbourgon/diskv/blob/v2.0.1/LICENSE))
 - [github.com/pierrec/lz4/v4](https://pkg.go.dev/github.com/pierrec/lz4/v4) ([BSD-3-Clause](https://github.com/pierrec/lz4/blob/v4.1.18/LICENSE))
 - [github.com/pkg/errors](https://pkg.go.dev/github.com/pkg/errors) ([BSD-2-Clause](https://github.com/pkg/errors/blob/v0.9.1/LICENSE))
 - [github.com/pquerna/cachecontrol](https://pkg.go.dev/github.com/pquerna/cachecontrol) ([Apache-2.0](https://github.com/pquerna/cachecontrol/blob/v0.2.0/LICENSE))
 - [github.com/prometheus/client_golang/prometheus](https://pkg.go.dev/github.com/prometheus/client_golang/prometheus) ([Apache-2.0](https://github.com/prometheus/client_golang/blob/v1.17.0/LICENSE))
 - [github.com/prometheus/client_model/go](https://pkg.go.dev/github.com/prometheus/client_model/go) ([Apache-2.0](https://github.com/prometheus/client_model/blob/v0.5.0/LICENSE))
 - [github.com/prometheus/common](https://pkg.go.dev/github.com/prometheus/common) ([Apache-2.0](https://github.com/prometheus/common/blob/v0.45.0/LICENSE))
 - [github.com/prometheus/common/internal/bitbucket.org/ww/goautoneg](https://pkg.go.dev/github.com/prometheus/common/internal/bitbucket.org/ww/goautoneg) ([BSD-3-Clause](https://github.com/prometheus/common/blob/v0.45.0/internal/bitbucket.org/ww/goautoneg/README.txt))
 - [github.com/prometheus/procfs](https://pkg.go.dev/github.com/prometheus/procfs) ([Apache-2.0](https://github.com/prometheus/procfs/blob/v0.12.0/LICENSE))
 - [github.com/redis/go-redis/v9](https://pkg.go.dev/github.com/redis/go-redis/v9) ([BSD-2-Clause](https://github.com/redis/go-redis/blob/v9.3.0/LICENSE))
 - [github.com/remyoudompheng/bigfft](https://pkg.go.dev/github.com/remyoudompheng/bigfft) ([BSD-3-Clause](https://github.com/remyoudompheng/bigfft/blob/24d4a6f8daec/LICENSE))
 - [github.com/rhysd/go-github-selfupdate/selfupdate](https://pkg.go.dev/github.com/rhysd/go-github-selfupdate/selfupdate) ([MIT](https://github.com/rhysd/go-github-selfupdate/blob/v1.2.3/LICENSE))
 - [github.com/rivo/uniseg](https://pkg.go.dev/github.com/rivo/uniseg) ([MIT](https://github.com/rivo/uniseg/blob/v0.4.4/LICENSE.txt))
 - [github.com/robfig/cron/v3](https://pkg.go.dev/github.com/robfig/cron/v3) ([MIT](https://github.com/robfig/cron/blob/v3.0.1/LICENSE))
 - [github.com/russellhaering/goxmldsig](https://pkg.go.dev/github.com/russellhaering/goxmldsig) ([Apache-2.0](https://github.com/russellhaering/goxmldsig/blob/v1.4.0/LICENSE))
 - [github.com/russross/blackfriday/v2](https://pkg.go.dev/github.com/russross/blackfriday/v2) ([BSD-2-Clause](https://github.com/russross/blackfriday/blob/v2.1.0/LICENSE.txt))
 - [github.com/ryanuber/go-glob](https://pkg.go.dev/github.com/ryanuber/go-glob) ([MIT](https://github.com/ryanuber/go-glob/blob/v1.0.0/LICENSE))
 - [github.com/safchain/ethtool](https://pkg.go.dev/github.com/safchain/ethtool) ([Apache-2.0](https://github.com/safchain/ethtool/blob/v0.3.0/LICENSE))
 - [github.com/samber/lo](https://pkg.go.dev/github.com/samber/lo) ([MIT](https://github.com/samber/lo/blob/v1.39.0/LICENSE))
 - [github.com/sirupsen/logrus](https://pkg.go.dev/github.com/sirupsen/logrus) ([MIT](https://github.com/sirupsen/logrus/blob/v1.9.3/LICENSE))
 - [github.com/skratchdot/open-golang/open](https://pkg.go.dev/github.com/skratchdot/open-golang/open) ([MIT](https://github.com/skratchdot/open-golang/blob/eef842397966/LICENSE))
 - [github.com/spf13/cobra](https://pkg.go.dev/github.com/spf13/cobra) ([Apache-2.0](https://github.com/spf13/cobra/blob/v1.8.0/LICENSE.txt))
 - [github.com/spf13/pflag](https://pkg.go.dev/github.com/spf13/pflag) ([BSD-3-Clause](https://github.com/spf13/pflag/blob/v1.0.5/LICENSE))
 - [github.com/stoewer/go-strcase](https://pkg.go.dev/github.com/stoewer/go-strcase) ([MIT](https://github.com/stoewer/go-strcase/blob/v1.3.0/LICENSE))
 - [github.com/tailscale/golang-x-crypto](https://pkg.go.dev/github.com/tailscale/golang-x-crypto) ([BSD-3-Clause](https://github.com/tailscale/golang-x-crypto/blob/f0b76a10a08e/LICENSE))
 - [github.com/tailscale/goupnp](https://pkg.go.dev/github.com/tailscale/goupnp) ([BSD-2-Clause](https://github.com/tailscale/goupnp/blob/c64d0f06ea05/LICENSE))
 - [github.com/tailscale/hujson](https://pkg.go.dev/github.com/tailscale/hujson) ([BSD-3-Clause](https://github.com/tailscale/hujson/blob/20486734a56a/LICENSE))
 - [github.com/tailscale/netlink](https://pkg.go.dev/github.com/tailscale/netlink) ([Apache-2.0](https://github.com/tailscale/netlink/blob/cabfb018fe85/LICENSE))
 - [github.com/tailscale/web-client-prebuilt](https://pkg.go.dev/github.com/tailscale/web-client-prebuilt) ([BSD-3-Clause](https://github.com/tailscale/web-client-prebuilt/blob/3a45625fe806/LICENSE))
 - [github.com/tailscale/wireguard-go](https://pkg.go.dev/github.com/tailscale/wireguard-go) ([MIT](https://github.com/tailscale/wireguard-go/blob/cc193a0b3272/LICENSE))
 - [github.com/tcnksm/go-gitconfig](https://pkg.go.dev/github.com/tcnksm/go-gitconfig) ([MIT](https://github.com/tcnksm/go-gitconfig/blob/v0.1.2/LICENSE))
 - [github.com/tcnksm/go-httpstat](https://pkg.go.dev/github.com/tcnksm/go-httpstat) ([MIT](https://github.com/tcnksm/go-httpstat/blob/v0.2.0/LICENSE))
 - [github.com/u-root/uio](https://pkg.go.dev/github.com/u-root/uio) ([BSD-3-Clause](https://github.com/u-root/uio/blob/3e8cd9d6bf63/LICENSE))
 - [github.com/ulikunitz/xz](https://pkg.go.dev/github.com/ulikunitz/xz) ([BSD-3-Clause](https://github.com/ulikunitz/xz/blob/v0.5.11/LICENSE))
 - [github.com/vishvananda/netlink/nl](https://pkg.go.dev/github.com/vishvananda/netlink/nl) ([Apache-2.0](https://github.com/vishvananda/netlink/blob/v1.2.1-beta.2/LICENSE))
 - [github.com/vishvananda/netns](https://pkg.go.dev/github.com/vishvananda/netns) ([Apache-2.0](https://github.com/vishvananda/netns/blob/v0.0.4/LICENSE))
 - [github.com/wk8/go-ordered-map/v2](https://pkg.go.dev/github.com/wk8/go-ordered-map/v2) ([Apache-2.0](https://github.com/wk8/go-ordered-map/blob/v2.1.8/LICENSE))
 - [github.com/x448/float16](https://pkg.go.dev/github.com/x448/float16) ([MIT](https://github.com/x448/float16/blob/v0.8.4/LICENSE))
 - [github.com/xdg-go/pbkdf2](https://pkg.go.dev/github.com/xdg-go/pbkdf2) ([Apache-2.0](https://github.com/xdg-go/pbkdf2/blob/v1.0.0/LICENSE))
 - [github.com/xdg-go/scram](https://pkg.go.dev/github.com/xdg-go/scram) ([Apache-2.0](https://github.com/xdg-go/scram/blob/v1.1.2/LICENSE))
 - [github.com/xdg-go/stringprep](https://pkg.go.dev/github.com/xdg-go/stringprep) ([Apache-2.0](https://github.com/xdg-go/stringprep/blob/v1.0.4/LICENSE))
 - [github.com/xlab/treeprint](https://pkg.go.dev/github.com/xlab/treeprint) ([MIT](https://github.com/xlab/treeprint/blob/v1.2.0/LICENSE))
 - [github.com/youmark/pkcs8](https://pkg.go.dev/github.com/youmark/pkcs8) ([MIT](https://github.com/youmark/pkcs8/blob/1326539a0a0a/LICENSE))
 - [github.com/zclconf/go-cty/cty](https://pkg.go.dev/github.com/zclconf/go-cty/cty) ([MIT](https://github.com/zclconf/go-cty/blob/v1.14.1/LICENSE))
 - [github.com/zitadel/oidc/v2/pkg](https://pkg.go.dev/github.com/zitadel/oidc/v2/pkg) ([Apache-2.0](https://github.com/zitadel/oidc/blob/v2.12.0/LICENSE))
 - [go.etcd.io/etcd/api/v3](https://pkg.go.dev/go.etcd.io/etcd/api/v3) ([Apache-2.0](https://github.com/etcd-io/etcd/blob/api/v3.5.10/api/LICENSE))
 - [go.etcd.io/etcd/client/pkg/v3](https://pkg.go.dev/go.etcd.io/etcd/client/pkg/v3) ([Apache-2.0](https://github.com/etcd-io/etcd/blob/client/pkg/v3.5.10/client/pkg/LICENSE))
 - [go.etcd.io/etcd/client/v3](https://pkg.go.dev/go.etcd.io/etcd/client/v3) ([Apache-2.0](https://github.com/etcd-io/etcd/blob/client/v3.5.10/client/v3/LICENSE))
 - [go.mongodb.org/mongo-driver](https://pkg.go.dev/go.mongodb.org/mongo-driver) ([Apache-2.0](https://github.com/mongodb/mongo-go-driver/blob/v1.13.0/LICENSE))
 - [go.opencensus.io](https://pkg.go.dev/go.opencensus.io) ([Apache-2.0](https://github.com/census-instrumentation/opencensus-go/blob/v0.24.0/LICENSE))
 - [go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc](https://pkg.go.dev/go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc) ([Apache-2.0](https://github.com/open-telemetry/opentelemetry-go-contrib/blob/instrumentation/google.golang.org/grpc/otelgrpc/v0.46.1/instrumentation/google.golang.org/grpc/otelgrpc/LICENSE))
 - [go.opentelemetry.io/contrib/instrumentation/net/http/otelhttp](https://pkg.go.dev/go.opentelemetry.io/contrib/instrumentation/net/http/otelhttp) ([Apache-2.0](https://github.com/open-telemetry/opentelemetry-go-contrib/blob/instrumentation/net/http/otelhttp/v0.46.1/instrumentation/net/http/otelhttp/LICENSE))
 - [go.opentelemetry.io/otel](https://pkg.go.dev/go.opentelemetry.io/otel) ([Apache-2.0](https://github.com/open-telemetry/opentelemetry-go/blob/v1.21.0/LICENSE))
 - [go.opentelemetry.io/otel/exporters/otlp/otlptrace](https://pkg.go.dev/go.opentelemetry.io/otel/exporters/otlp/otlptrace) ([Apache-2.0](https://github.com/open-telemetry/opentelemetry-go/blob/exporters/otlp/otlptrace/v1.21.0/exporters/otlp/otlptrace/LICENSE))
 - [go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc](https://pkg.go.dev/go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc) ([Apache-2.0](https://github.com/open-telemetry/opentelemetry-go/blob/exporters/otlp/otlptrace/otlptracegrpc/v1.21.0/exporters/otlp/otlptrace/otlptracegrpc/LICENSE))
 - [go.opentelemetry.io/otel/metric](https://pkg.go.dev/go.opentelemetry.io/otel/metric) ([Apache-2.0](https://github.com/open-telemetry/opentelemetry-go/blob/metric/v1.21.0/metric/LICENSE))
 - [go.opentelemetry.io/otel/sdk](https://pkg.go.dev/go.opentelemetry.io/otel/sdk) ([Apache-2.0](https://github.com/open-telemetry/opentelemetry-go/blob/sdk/v1.21.0/sdk/LICENSE))
 - [go.opentelemetry.io/otel/trace](https://pkg.go.dev/go.opentelemetry.io/otel/trace) ([Apache-2.0](https://github.com/open-telemetry/opentelemetry-go/blob/trace/v1.21.0/trace/LICENSE))
 - [go.opentelemetry.io/proto/otlp](https://pkg.go.dev/go.opentelemetry.io/proto/otlp) ([Apache-2.0](https://github.com/open-telemetry/opentelemetry-proto-go/blob/otlp/v1.0.0/otlp/LICENSE))
 - [go.starlark.net](https://pkg.go.dev/go.starlark.net) ([BSD-3-Clause](https://github.com/google/starlark-go/blob/90ade8b19d09/LICENSE))
 - [go.uber.org/atomic](https://pkg.go.dev/go.uber.org/atomic) ([MIT](https://github.com/uber-go/atomic/blob/v1.11.0/LICENSE.txt))
 - [go.uber.org/multierr](https://pkg.go.dev/go.uber.org/multierr) ([MIT](https://github.com/uber-go/multierr/blob/v1.11.0/LICENSE.txt))
 - [go.uber.org/zap](https://pkg.go.dev/go.uber.org/zap) ([MIT](https://github.com/uber-go/zap/blob/v1.26.0/LICENSE.txt))
 - [go4.org/mem](https://pkg.go.dev/go4.org/mem) ([Apache-2.0](https://github.com/go4org/mem/blob/4f986261bf13/LICENSE))
 - [go4.org/netipx](https://pkg.go.dev/go4.org/netipx) ([BSD-3-Clause](https://github.com/go4org/netipx/blob/fdeea329fbba/LICENSE))
 - [golang.org/x/crypto](https://pkg.go.dev/golang.org/x/crypto) ([BSD-3-Clause](https://cs.opensource.google/go/x/crypto/+/v0.17.0:LICENSE))
 - [golang.org/x/exp](https://pkg.go.dev/golang.org/x/exp) ([BSD-3-Clause](https://cs.opensource.google/go/x/exp/+/65229373:LICENSE))
 - [golang.org/x/mod](https://pkg.go.dev/golang.org/x/mod) ([BSD-3-Clause](https://cs.opensource.google/go/x/mod/+/v0.14.0:LICENSE))
 - [golang.org/x/net](https://pkg.go.dev/golang.org/x/net) ([BSD-3-Clause](https://cs.opensource.google/go/x/net/+/v0.19.0:LICENSE))
 - [golang.org/x/oauth2](https://pkg.go.dev/golang.org/x/oauth2) ([BSD-3-Clause](https://cs.opensource.google/go/x/oauth2/+/v0.15.0:LICENSE))
 - [golang.org/x/sync](https://pkg.go.dev/golang.org/x/sync) ([BSD-3-Clause](https://cs.opensource.google/go/x/sync/+/v0.5.0:LICENSE))
 - [golang.org/x/sys](https://pkg.go.dev/golang.org/x/sys) ([BSD-3-Clause](https://cs.opensource.google/go/x/sys/+/v0.15.0:LICENSE))
 - [golang.org/x/term](https://pkg.go.dev/golang.org/x/term) ([BSD-3-Clause](https://cs.opensource.google/go/x/term/+/v0.15.0:LICENSE))
 - [golang.org/x/text](https://pkg.go.dev/golang.org/x/text) ([BSD-3-Clause](https://cs.opensource.google/go/x/text/+/v0.14.0:LICENSE))
 - [golang.org/x/time/rate](https://pkg.go.dev/golang.org/x/time/rate) ([BSD-3-Clause](https://cs.opensource.google/go/x/time/+/v0.5.0:LICENSE))
 - [golang.org/x/tools](https://pkg.go.dev/golang.org/x/tools) ([BSD-3-Clause](https://cs.opensource.google/go/x/tools/+/v0.16.0:LICENSE))
 - [gomodules.xyz/jsonpatch/v2](https://pkg.go.dev/gomodules.xyz/jsonpatch/v2) ([Apache-2.0](https://github.com/gomodules/jsonpatch/blob/v2.4.0/v2/LICENSE))
 - [google.golang.org/api](https://pkg.go.dev/google.golang.org/api) ([BSD-3-Clause](https://github.com/googleapis/google-api-go-client/blob/v0.153.0/LICENSE))
 - [google.golang.org/api/internal/third_party/uritemplates](https://pkg.go.dev/google.golang.org/api/internal/third_party/uritemplates) ([BSD-3-Clause](https://github.com/googleapis/google-api-go-client/blob/v0.153.0/internal/third_party/uritemplates/LICENSE))
 - [google.golang.org/genproto/googleapis/api](https://pkg.go.dev/google.golang.org/genproto/googleapis/api) ([Apache-2.0](https://github.com/googleapis/go-genproto/blob/3a041ad873d4/googleapis/api/LICENSE))
 - [google.golang.org/genproto/googleapis/rpc](https://pkg.go.dev/google.golang.org/genproto/googleapis/rpc) ([Apache-2.0](https://github.com/googleapis/go-genproto/blob/3a041ad873d4/googleapis/rpc/LICENSE))
 - [google.golang.org/grpc](https://pkg.go.dev/google.golang.org/grpc) ([Apache-2.0](https://github.com/grpc/grpc-go/blob/v1.59.0/LICENSE))
 - [google.golang.org/protobuf](https://pkg.go.dev/google.golang.org/protobuf) ([BSD-3-Clause](https://github.com/protocolbuffers/protobuf-go/blob/v1.31.0/LICENSE))
 - [gopkg.in/evanphx/json-patch.v5](https://pkg.go.dev/gopkg.in/evanphx/json-patch.v5) ([BSD-3-Clause](https://github.com/evanphx/json-patch/blob/v5.7.0/LICENSE))
 - [gopkg.in/inf.v0](https://pkg.go.dev/gopkg.in/inf.v0) ([BSD-3-Clause](https://github.com/go-inf/inf/blob/v0.9.1/LICENSE))
 - [gopkg.in/natefinch/lumberjack.v2](https://pkg.go.dev/gopkg.in/natefinch/lumberjack.v2) ([MIT](https://github.com/natefinch/lumberjack/blob/v2.2.1/LICENSE))
 - [gopkg.in/square/go-jose.v2](https://pkg.go.dev/gopkg.in/square/go-jose.v2) ([Apache-2.0](https://github.com/square/go-jose/blob/v2.6.0/LICENSE))
 - [gopkg.in/square/go-jose.v2/json](https://pkg.go.dev/gopkg.in/square/go-jose.v2/json) ([BSD-3-Clause](https://github.com/square/go-jose/blob/v2.6.0/json/LICENSE))
 - [gopkg.in/yaml.v2](https://pkg.go.dev/gopkg.in/yaml.v2) ([Apache-2.0](https://github.com/go-yaml/yaml/blob/v2.4.0/LICENSE))
 - [gopkg.in/yaml.v3](https://pkg.go.dev/gopkg.in/yaml.v3) ([MIT](https://github.com/go-yaml/yaml/blob/v3.0.1/LICENSE))
 - [gvisor.dev/gvisor/pkg](https://pkg.go.dev/gvisor.dev/gvisor/pkg) ([Apache-2.0](https://github.com/google/gvisor/blob/4fe30062272c/LICENSE))
 - [inet.af/peercred](https://pkg.go.dev/inet.af/peercred) ([BSD-3-Clause](https://github.com/inetaf/peercred/blob/0893ea02156a/LICENSE))
 - [k8s.io/api](https://pkg.go.dev/k8s.io/api) ([Apache-2.0](https://github.com/kubernetes/api/blob/v0.28.4/LICENSE))
 - [k8s.io/apiextensions-apiserver/pkg](https://pkg.go.dev/k8s.io/apiextensions-apiserver/pkg) ([Apache-2.0](https://github.com/kubernetes/apiextensions-apiserver/blob/v0.28.4/LICENSE))
 - [k8s.io/apimachinery/pkg](https://pkg.go.dev/k8s.io/apimachinery/pkg) ([Apache-2.0](https://github.com/kubernetes/apimachinery/blob/v0.28.4/LICENSE))
 - [k8s.io/apimachinery/third_party/forked/golang](https://pkg.go.dev/k8s.io/apimachinery/third_party/forked/golang) ([BSD-3-Clause](https://github.com/kubernetes/apimachinery/blob/v0.28.4/third_party/forked/golang/LICENSE))
 - [k8s.io/apiserver](https://pkg.go.dev/k8s.io/apiserver) ([Apache-2.0](https://github.com/loft-sh/k8s-apiserver/blob/v0.28.4-loft.0/LICENSE))
 - [k8s.io/cli-runtime/pkg](https://pkg.go.dev/k8s.io/cli-runtime/pkg) ([Apache-2.0](https://github.com/kubernetes/cli-runtime/blob/v0.28.4/LICENSE))
 - [k8s.io/client-go](https://pkg.go.dev/k8s.io/client-go) ([Apache-2.0](https://github.com/kubernetes/client-go/blob/v0.28.4/LICENSE))
 - [k8s.io/client-go/third_party/forked/golang/template](https://pkg.go.dev/k8s.io/client-go/third_party/forked/golang/template) ([BSD-3-Clause](https://github.com/kubernetes/client-go/blob/v0.28.4/third_party/forked/golang/LICENSE))
 - [k8s.io/cloud-provider](https://pkg.go.dev/k8s.io/cloud-provider) ([Apache-2.0](https://github.com/kubernetes/cloud-provider/blob/v0.28.4/LICENSE))
 - [k8s.io/component-base](https://pkg.go.dev/k8s.io/component-base) ([Apache-2.0](https://github.com/kubernetes/component-base/blob/v0.28.4/LICENSE))
 - [k8s.io/component-helpers/storage/ephemeral](https://pkg.go.dev/k8s.io/component-helpers/storage/ephemeral) ([Apache-2.0](https://github.com/kubernetes/component-helpers/blob/v0.28.4/LICENSE))
 - [k8s.io/controller-manager/config](https://pkg.go.dev/k8s.io/controller-manager/config) ([Apache-2.0](https://github.com/kubernetes/controller-manager/blob/v0.28.4/LICENSE))
 - [k8s.io/gengo](https://pkg.go.dev/k8s.io/gengo) ([Apache-2.0](https://github.com/kubernetes/gengo/blob/9cce18d56c01/LICENSE))
 - [k8s.io/klog/v2](https://pkg.go.dev/k8s.io/klog/v2) ([Apache-2.0](https://github.com/kubernetes/klog/blob/v2.110.1/LICENSE))
 - [k8s.io/kms](https://pkg.go.dev/k8s.io/kms) ([Apache-2.0](https://github.com/kubernetes/kms/blob/v0.28.4/LICENSE))
 - [k8s.io/kube-aggregator/pkg](https://pkg.go.dev/k8s.io/kube-aggregator/pkg) ([Apache-2.0](https://github.com/kubernetes/kube-aggregator/blob/v0.28.4/LICENSE))
 - [k8s.io/kube-controller-manager/config/v1alpha1](https://pkg.go.dev/k8s.io/kube-controller-manager/config/v1alpha1) ([Apache-2.0](https://github.com/kubernetes/kube-controller-manager/blob/v0.28.4/LICENSE))
 - [k8s.io/kube-openapi/pkg](https://pkg.go.dev/k8s.io/kube-openapi/pkg) ([Apache-2.0](https://github.com/kubernetes/kube-openapi/blob/2695361300d9/LICENSE))
 - [k8s.io/kube-openapi/pkg/internal/third_party/go-json-experiment/json](https://pkg.go.dev/k8s.io/kube-openapi/pkg/internal/third_party/go-json-experiment/json) ([BSD-3-Clause](https://github.com/kubernetes/kube-openapi/blob/2695361300d9/pkg/internal/third_party/go-json-experiment/json/LICENSE))
 - [k8s.io/kube-openapi/pkg/validation/errors](https://pkg.go.dev/k8s.io/kube-openapi/pkg/validation/errors) ([Apache-2.0](https://github.com/kubernetes/kube-openapi/blob/2695361300d9/pkg/validation/errors/LICENSE))
 - [k8s.io/kube-openapi/pkg/validation/spec](https://pkg.go.dev/k8s.io/kube-openapi/pkg/validation/spec) ([Apache-2.0](https://github.com/kubernetes/kube-openapi/blob/2695361300d9/pkg/validation/spec/LICENSE))
 - [k8s.io/kube-openapi/pkg/validation/strfmt](https://pkg.go.dev/k8s.io/kube-openapi/pkg/validation/strfmt) ([Apache-2.0](https://github.com/kubernetes/kube-openapi/blob/2695361300d9/pkg/validation/strfmt/LICENSE))
 - [k8s.io/kubectl/pkg](https://pkg.go.dev/k8s.io/kubectl/pkg) ([Apache-2.0](https://github.com/kubernetes/kubectl/blob/v0.28.4/LICENSE))
 - [k8s.io/pod-security-admission](https://pkg.go.dev/k8s.io/pod-security-admission) ([Apache-2.0](https://github.com/kubernetes/pod-security-admission/blob/v0.28.4/LICENSE))
 - [k8s.io/utils](https://pkg.go.dev/k8s.io/utils) ([Apache-2.0](https://github.com/loft-sh/k8s-utils/blob/4b3587390a1e/LICENSE))
 - [k8s.io/utils/internal/third_party/forked/golang](https://pkg.go.dev/k8s.io/utils/internal/third_party/forked/golang) ([BSD-3-Clause](https://github.com/loft-sh/k8s-utils/blob/4b3587390a1e/internal/third_party/forked/golang/LICENSE))
 - [modernc.org/libc](https://pkg.go.dev/modernc.org/libc) ([BSD-3-Clause](https://gitlab.com/cznic/libc/blob/v1.37.0/LICENSE-GO))
 - [modernc.org/libc/honnef.co/go/netdb](https://pkg.go.dev/modernc.org/libc/honnef.co/go/netdb) ([MIT](https://gitlab.com/cznic/libc/blob/v1.37.0/honnef.co/go/netdb/LICENSE))
 - [modernc.org/mathutil](https://pkg.go.dev/modernc.org/mathutil) ([Unknown](Unknown))
 - [modernc.org/memory](https://pkg.go.dev/modernc.org/memory) ([BSD-3-Clause](https://gitlab.com/cznic/memory/blob/v1.7.2/LICENSE-GO))
 - [modernc.org/sqlite](https://pkg.go.dev/modernc.org/sqlite) ([BSD-3-Clause](https://gitlab.com/cznic/sqlite/blob/v1.27.0/LICENSE))
 - [nhooyr.io/websocket](https://pkg.go.dev/nhooyr.io/websocket) ([ISC](https://github.com/nhooyr/websocket/blob/v1.8.10/LICENSE.txt))
 - [sigs.k8s.io/apiserver-network-proxy/konnectivity-client](https://pkg.go.dev/sigs.k8s.io/apiserver-network-proxy/konnectivity-client) ([Apache-2.0](https://github.com/kubernetes-sigs/apiserver-network-proxy/blob/konnectivity-client/v0.28.2/konnectivity-client/LICENSE))
 - [sigs.k8s.io/controller-runtime](https://pkg.go.dev/sigs.k8s.io/controller-runtime) ([Apache-2.0](https://github.com/kubernetes-sigs/controller-runtime/blob/v0.16.3/LICENSE))
 - [sigs.k8s.io/controller-tools/pkg](https://pkg.go.dev/sigs.k8s.io/controller-tools/pkg) ([Apache-2.0](https://github.com/kubernetes-sigs/controller-tools/blob/v0.13.0/LICENSE))
 - [sigs.k8s.io/json](https://pkg.go.dev/sigs.k8s.io/json) ([Apache-2.0](https://github.com/kubernetes-sigs/json/blob/bc3834ca7abd/LICENSE))
 - [sigs.k8s.io/kustomize/api](https://pkg.go.dev/sigs.k8s.io/kustomize/api) ([Apache-2.0](https://github.com/kubernetes-sigs/kustomize/blob/api/v0.15.0/api/LICENSE))
 - [sigs.k8s.io/kustomize/kyaml](https://pkg.go.dev/sigs.k8s.io/kustomize/kyaml) ([Apache-2.0](https://github.com/kubernetes-sigs/kustomize/blob/kyaml/v0.15.0/kyaml/LICENSE))
 - [sigs.k8s.io/kustomize/kyaml/internal/forked/github.com/go-yaml/yaml](https://pkg.go.dev/sigs.k8s.io/kustomize/kyaml/internal/forked/github.com/go-yaml/yaml) ([MIT](https://github.com/kubernetes-sigs/kustomize/blob/kyaml/v0.15.0/kyaml/internal/forked/github.com/go-yaml/yaml/LICENSE))
 - [sigs.k8s.io/kustomize/kyaml/internal/forked/github.com/qri-io/starlib/util](https://pkg.go.dev/sigs.k8s.io/kustomize/kyaml/internal/forked/github.com/qri-io/starlib/util) ([MIT](https://github.com/kubernetes-sigs/kustomize/blob/kyaml/v0.15.0/kyaml/internal/forked/github.com/qri-io/starlib/util/LICENSE))
 - [sigs.k8s.io/structured-merge-diff/v4](https://pkg.go.dev/sigs.k8s.io/structured-merge-diff/v4) ([Apache-2.0](https://github.com/kubernetes-sigs/structured-merge-diff/blob/v4.4.1/LICENSE))
 - [sigs.k8s.io/yaml](https://pkg.go.dev/sigs.k8s.io/yaml) ([Apache-2.0](https://github.com/kubernetes-sigs/yaml/blob/v1.4.0/LICENSE))
 - [sigs.k8s.io/yaml/goyaml.v2](https://pkg.go.dev/sigs.k8s.io/yaml/goyaml.v2) ([Apache-2.0](https://github.com/kubernetes-sigs/yaml/blob/v1.4.0/goyaml.v2/LICENSE))
 - [tailscale.com](https://pkg.go.dev/tailscale.com) ([BSD-3-Clause](https://github.com/loft-sh/tailscale/blob/fe40253cfbac/LICENSE))
 - [tailscale.com/tempfork/device](https://pkg.go.dev/tailscale.com/tempfork/device) ([MIT](https://github.com/loft-sh/tailscale/blob/fe40253cfbac/tempfork/device/LICENSE))

